# ai-booking-system

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/custom_scripts/: dvc_dryrun.sh
.github/workflows/: docs.yml  ml_integration.yml  testing.yml
assets/: .gitignore  demo_bookings.csv  demo_energy.csv
assets/templates/: custom_cover_page.tpl
buildings/demo_school/: adjacency.json  adjacency.npy  config.yaml  dvc.yaml  params.yaml  specifications.yaml
buildings/demo_school/data/: .gitignore
buildings/demo_school/model/: .gitignore
buildings/strandskolen/: config.yaml  dvc.yaml  params.yaml  regression.yaml  specifications.yaml
buildings/strandskolen/data/: .gitignore  preprocessed_data.pkl  raw_data.pkl
buildings/strandskolen/model/: .gitignore
capacity/: index.html
docs/: capacity.md  graph.md  index.md  thermo.md
docs/ml/: dev.md  usage.md  workflow.md
docs/ref/: cost.md  ranker.md  recommender.md
docs/ref/ml/: evaluate.md  (+3 more)
examples/time/: simulation.py  sketch.py
graph/: index.html
gui/: app.py  dockerfile  requirements.txt
ml/dev/: index.html
ml/usage/: index.html
ml/workflow/: index.html
model/: costs.csv  cross_validation.csv  model.metadata  test.json  train.json
notebooks/: EDA_Aarhus.ipynb  EDA_Favrskov.ipynb  EDA_Syddjurs.ipynb  demo_data.ipynb  mock_showcase.ipynb  prototype_constrains_Aarhus.ipynb  prototype_electricity_Aarhus.ipynb  version2_mockshowcase.ipynb
notebooks/small_school/: small_school.py
notebooks/time/: simulation.py
print_page/: index.html
ref/cost/: index.html
ref/ranker/: index.html
ref/recommender/: index.html
search/: search_index.json
tests/: conftest.py
tests/integration_tests/: test_adjacency.py  test_io.py
tests/unit_tests/: test_recommender.py
thermo/: config.py  heater.py  index.html  recommender.py  schedule.py  school.py  simulator.py
thermo/adapter/: state_connection.py
thermo/cost_model/: adjacency.py  model.py
thermo/costs/: __init__.py  amenity.py  base.py  capacity.py  heating.py
thermo/graph/: adjacency.py  generate_random.py
thermo/models/: constrained.py
thermo/ranker/: __init__.py  base.py  full.py
thermo/simulation/: heater.py  schedule.py  school.py  simulator.py
thermo/stages/: evaluate_model.py  get_data.py  preprocessing.py  train.py
thermo/utils/: building.py  formatting.py  io.py  logger.py  postprocessing.py  room.py  time.py
(+25 files in other folders)
