[tool.poetry]
name = "thermo"
version = "0.1.0"
description = ""
authors = ["dataX"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
networkx = "^3.0"
matplotlib = "^3.7.1"
black = "^23.3.0"
flake8 = "3.5.0"
precommit-hook = "^0.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.11"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
