[tool.poetry]
name = "thermo"
version = "0.1.0"
description = ""
authors = ["dataX"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
networkx = "^3.1"
workalendar = "^17.0.0"
pandas = {extras = ["output-formatting"], version = "^2.0.1"}
scikit-learn = "^1.2.2"
cvxpy = "^1.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
black = "^23.3.0"
flake8 = "3.5.0"
pre-commit = "^2.18.1"
pytest = "^6.2.5"
isort = "^5.12.0"
seaborn = "^0.12.2"
dvc = "^2.58.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.11"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-print-site-plugin = "^2.3.4"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
streamlit = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
